# cantrip

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  cantrip-traits.xlsx  justfile  trait-matrix.xlsx  update-doc.sh
.cargo/: config.toml
.github/workflows/: build.yml
benches/: benchmark.rs
project/: release  source-stats  update-doc.sh
src/: lib.rs
src/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  slice.rs  vec.rs  vec_deque.rs
src/core/: iterable.rs  unfold.rs
src/extensions/: aggregable.rs  collectible.rs  collection.rs  collection_into.rs  collection_to.rs  convert.rs  eq_map.rs  eq_set.rs  hash_map.rs  hash_set.rs  indexed.rs  iterable.rs  list.rs  map.rs  mod.rs  multimap.rs  ord_map.rs  ord_set.rs  ordered.rs  productable.rs  reverse_iterable.rs  reversible.rs  sequence.rs  sequence_into.rs  sequence_to.rs  set.rs  slice.rs  summable.rs  test.rs  traits.rs  transform.rs  transform_into.rs  transform_to.rs  transform_vec.rs  transform_vec_into.rs  transform_vec_to.rs  traversable.rs  vec.rs
src/extensions/api/: aggregable.rs  base.rs  iterable.rs  list.rs  map.rs  mod.rs  multimap.rs  ordered.rs  set.rs  slice.rs  traits.rs
src/extensions/collections/: binary_heap.rs  btree_map.rs  btree_set.rs  hash_map.rs  hash_set.rs  linked_list.rs  mod.rs  slice.rs  vec.rs  vec_deque.rs
src/extensions/core/: mod.rs
src/extensions/impl/: hash_map.rs  hash_set.rs  mod.rs  slice.rs  vec.rs
src/extensions/std/: slice.rs  vec.rs
src/extensions/std/collections/: hash_map.rs  hash_set.rs
src/extensions/util/: append.rs  heap.rs  iterable.rs  iterate.rs  mod.rs  multi_map.rs  unfold.rs
tests/: examples.rs  main.rs  test.rs
tests/base/: collections.rs  fixtures.rs  mod.rs  properties.rs
tests/extensions/: collectible.rs  collection.rs  collection_into.rs  collection_to.rs  collections.rs  convert.rs  list.rs  map.rs  mod.rs  ordered.rs  reversible.rs  sequence.rs  sequence_into.rs  sequence_to.rs  slice.rs  traits.rs  transform.rs  transform_into.rs  transform_to.rs  transform_vec.rs  transform_vec_into.rs  transform_vec_to.rs  traversable.rs  util.rs
