[package]
name = "cantrip"
version = "0.1.0"
edition = "2021"
description = "Practical extension methods for standard Rust collections"
authors = ["Martin Ockajak"]
documentation = "ttps://docs.rs/cantrip/latest/cantrip"
repository = "https://github.com/martin-ockajak/cantrip"
license = "Apache-2.0"
readme = "README.md"
categories = ["algorithms", "data-structures", "rust-patterns"]
keywords = ["collection", "functional", "immutable", "group-by", "map"]

[badges]
maintenance = { status = "actively-developed" }

# [dev-dependencies]
# criterion = "0.5.1"

# [[bench]]
# name = "benchmark"
# harness = false

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[lints.rust]
all = "deny"

[lints.clippy]
all = "deny"

