[package]
name = "cantrip"
version = "0.4.1"
edition = "2024"
description = "Practical extension methods for standard Rust collections"
authors = ["Martin Ockajak"]
repository = "https://github.com/martin-ockajak/cantrip"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ["algorithms", "data-structures", "rust-patterns"]
keywords = ["collection", "functional", "immutable", "group-by", "map"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "benchmark"
harness = false

[profile.dev]
opt-level = 1
lto = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "unwind"

[lints.clippy]
all = "deny"

